Closed Bug 909139 Opened 12 years ago Closed 12 years ago

GeckoProfiler.h:103:55: error: unknown type name 'uint32_t' (non-SPS)

Categories

(Core :: Gecko Profiler, defect)

All
FreeBSD
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla26

People

(Reporter: jbeich, Assigned: jbeich)

References

Details

Attachments

(1 file)

On platforms without SPS profiler the build is broken due to standard types not being defined as there're no std* headers included before. Up until bug 907798 uint* types were pulled via Assertions.h->stddef.h. In file included from toolkit/xre/EventTracer.cpp:51: dist/include/GeckoProfiler.h:103:55: error: unknown type name 'uint32_t' const char** aFeatures, uint32_t aFeatureCount, ^ dist/include/GeckoProfiler.h:104:64: error: unknown type name 'uint32_t' const char** aThreadNameFilters, uint32_t aFil... ^
This is getting... boring. Cant a TBPL job actually check for builds WITHOUT the profiler ?
Attached patch add includeSplinter Review
Attachment #795184 - Flags: review?(gsvelto)
Comment on attachment 795184 [details] [diff] [review] add include Review of attachment 795184 [details] [diff] [review]: ----------------------------------------------------------------- Sigh. Ship it.
Attachment #795184 - Flags: review?(gsvelto) → review+
Keywords: checkin-needed
Assignee: nobody → jbeich
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: