Bug 909139 - Define integer types before using them for profiler stubs. r=ms2ger